changed opening balance

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -5,8 +5,8 @@
   </p>
 
   <p>
-    <strong>Balance:</strong>
-    <%= account.balance %>
+    <strong>Opening Balance:</strong>
+    <%= account.opening_balance %>
   </p>
 
 </div>
