--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div>
-    <%= form.label :balance, style: "display: block" %>
-    <%= form.text_field :balance %>
+    <%= form.label :opening_balance, style: "display: block" %>
+    <%= form.text_field :opening_balance %>
   </div>
 
   <div>
