--- a/app/views/main_pages/index.html.erb
+++ b/app/views/main_pages/index.html.erb
@@ -17,9 +17,9 @@
     <h1 class="display-1 mt-3">BankTrack</h1>
     <p class="lead">The world's most innovative financial tracking app!</p>
     
-    <button class="btn btn-dark" type="button">
-    <%= link_to "Get Started", accounts_path %>
-    </button>
+    
+    <%= button_to "Get Started", accounts_path, class:"btn btn-dark", method: :get %>
+    
     </div>
 
 
